[tool.poetry]
name = "webdriver-toolkit"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Jorge Vasconcelos <>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
