[tool.poetry]
name = "webdriver-toolkit"
version = "0.1.0"
description = "this is a awesome description"
license = "MIT"
authors = ["Jorge Vasconcelos <john@example.com>"]
keywords = ["selenium", "webdriver"]
readme = "README.md"
homepage = "https://github.com/MattiooFR/package_name"
repository = "https://github.com/MattiooFR/package_name"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
